syntax = "proto3";

package ekube.role.v1;
option go_package = "ekube/api/pb/role/v1;role";

// EffectType 授权效力包括两种：允许（Allow）和拒绝（Deny）
enum EffectType {
  // 允许访问
  ALLOW = 0;
  // 拒绝访问
  DENY = 1;
}

// Permission 权限
message Permission {
  // id
  // @gotags: bson:"_id" json:"id"
  string id = 1;
  // 创建时间
  // @gotags: bson:"create_at" json:"create_at"
  int64 create_at = 2;
  // 角色Id
  // @gotags: bson:"role_id" json:"role_id"
  string role_id = 3;
  // 权限具体定义
  // @gotags: bson:",inline" json:"spec"
  PermissionSpec spec = 4;
}

message PermissionSpec {
  // 创建人
  // @gotags: bson:"create_by" json:"create_by"
  string create_by = 1;
  // 权限描述
  // @gotags: bson:"desc" json:"desc"
  string desc = 2;
  // 效力
  // @gotags: bson:"effect" json:"effect"
  EffectType effect = 4;
  // 服务ID
  // @gotags: bson:"service_id" json:"service_id"
  string service_id = 5;
  // 资源列表
  // @gotags: bson:"resource_name" json:"resource_name"
  string resource_name = 6;
  // 维度
  // @gotags: bson:"label_key" json:"label_key"
  string label_key = 7;
  // 适配所有值
  // @gotags: bson:"match_all" json:"match_all"
  bool match_all = 8;
  // 标识值
  // @gotags: bson:"label_values" json:"label_values"
  repeated string label_values = 9;
}

// PermissionSet 用户列表
message PermissionSet {
  // @gotags: bson:"total" json:"total"
  int64 total = 1;
  // @gotags: bson:"items" json:"items"
  repeated Permission items = 2;
}

message AddPermissionToRoleRequest {
  // 资源范围
  // @gotags: json:"scope"
  string scope = 1;
  // 创建者ID
  // @gotags: json:"create_by" validate:"required"
  string create_by = 2;
  // 角色Id
  // @gotags: json:"role_id" validate:"required,lte=64"
  string role_id = 3;
  // 添加的权限列表
  // @gotags: json:"permissions" validate:"required"
  repeated PermissionSpec permissions = 4;
}

message RemovePermissionFromRoleRequest {
  // 资源范围
  // @gotags: json:"scope"
  string scope = 1;
  // @gotags: json:"role_id" validate:"required,lte=64"
  // 角色Id
  string role_id = 2;
  // @gotags: json:"remove_all"
  // 移除所有权限
  bool remove_all = 3;
  // 需要移除的权限
  // @gotags: json:"permission_id"
  repeated string permission_id = 4;
}

message UpdatePermissionRequest {
  // 资源范围
  // @gotags: json:"scope"
  string scope = 1;
  // permission id
  // @gotags: json:"id" validate:"required,lte=64"
  string id = 2;
  // 维度
  // @gotags: json:"label_key"
  string label_key = 3;
  // 适配所有值
  // @gotags: json:"match_all"
  bool match_all = 4;
  // 标识值
  // @gotags: json:"label_values"
  repeated string label_values = 5;
}