syntax = "proto3";

package ekube.role.v1;
option go_package = "ekube/api/pb/role/v1;role";

import "pb/role/v1/role.proto";
import "pb/role/v1/permission.proto";
import "ekube/pb/page/page.proto";

// RPC 角色RPC服务
service RPC {
  rpc ListRole(ListRoleRequest) returns(RoleSet);
  rpc DescribeRole(DescribeRoleRequest) returns(Role);
  rpc ListPermission(ListPermissionRequest) returns(PermissionSet);
  rpc DescribePermission(DescribePermissionRequest) returns(Permission);
}

// QueryPermissionRequest 查询用户权限
message ListPermissionRequest {
  // @gotags: json:"page"
  ekube.page.PageRequest page = 1;
  // @gotags: json:"namespace"
  string namespace = 2;
  // @gotags: json:"username"
  string username = 3;
  // 查询角色权限
  // @gotags: json:"role_id"
  string role_id = 4;
  // 忽略数据
  // @gotags: json:"skip_items"
  bool skip_items = 5;
}

// QueryRoleRequest 列表查询
message ListRoleRequest {
  // 资源范围
  // @gotags: json:"scope"
  repeated string scope = 1;
  // 分页参数
  // @gotags: json:"page"
  ekube.page.PageRequest page = 2;
  // @gotags: json:"workspace"
  string workspace = 3;
  // @gotags: json:"namespace"
  string namespace = 4;
  // @gotags: json:"with_permission"
  bool with_permission = 5;
}

// DescribeRoleRequest role详情
message DescribeRoleRequest {
  // @gotags: json:"id"
  string id = 1;
  // @gotags: json:"name,omitempty"
  string name = 2;
}

// DescribeRoleRequest role详情
message DescribePermissionRequest {
  // @gotags: json:"id"
  string id = 1;
}